--- a/cxfontconsts.html
+++ b/cxfontconsts.html
@@ -95,9 +95,9 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#slimNumberSet"
-    title="slimNumberSet = newSeq(Natural(0))"><wbr />slim<wbr />Number<wbr />Set<span class="attachedType"></span></a></li>
+    title="slimNumberSet = newSeq(Natural(0))">slimNumberSet</a></li>
   <li><a class="reference" href="#slimCharSet"
-    title="slimCharSet = @[&quot;,&quot;, &quot;.&quot;, &quot;:&quot;, &quot; &quot;]"><wbr />slim<wbr />Char<wbr />Set<span class="attachedType"></span></a></li>
+    title="slimCharSet = @[&quot;,&quot;, &quot;.&quot;, &quot;:&quot;, &quot; &quot;]">slimCharSet</a></li>
 
   </ul>
 </li>
@@ -760,7 +760,7 @@ function main() {
   \:\ \:\ \  #
    \:\_\:\ \ #
     \_____\/ #
-&quot;&quot;&quot;"><wbr />swampraw<span class="attachedType"></span></a></li>
+&quot;&quot;&quot;">swampraw</a></li>
 
   </ul>
 </li>
@@ -768,33 +768,33 @@ function main() {
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#snumber0"
-    title="snumber0 = [&quot;┌─┐&quot;, &quot;│ │&quot;, &quot;└─┘&quot;]"><wbr />snumber0<span class="attachedType"></span></a></li>
+    title="snumber0 = [&quot;┌─┐&quot;, &quot;│ │&quot;, &quot;└─┘&quot;]">snumber0</a></li>
   <li><a class="reference" href="#snumber1"
-    title="snumber1 = [&quot;  ╷&quot;, &quot;  │&quot;, &quot;  ╵&quot;]"><wbr />snumber1<span class="attachedType"></span></a></li>
+    title="snumber1 = [&quot;  ╷&quot;, &quot;  │&quot;, &quot;  ╵&quot;]">snumber1</a></li>
   <li><a class="reference" href="#snumber2"
-    title="snumber2 = [&quot;╶─┐&quot;, &quot;┌─┘&quot;, &quot;└─╴&quot;]"><wbr />snumber2<span class="attachedType"></span></a></li>
+    title="snumber2 = [&quot;╶─┐&quot;, &quot;┌─┘&quot;, &quot;└─╴&quot;]">snumber2</a></li>
   <li><a class="reference" href="#snumber3"
-    title="snumber3 = [&quot;╶─┐&quot;, &quot;╶─┤&quot;, &quot;╶─┘&quot;]"><wbr />snumber3<span class="attachedType"></span></a></li>
+    title="snumber3 = [&quot;╶─┐&quot;, &quot;╶─┤&quot;, &quot;╶─┘&quot;]">snumber3</a></li>
   <li><a class="reference" href="#snumber4"
-    title="snumber4 = [&quot;╷ ╷&quot;, &quot;└─┤&quot;, &quot;  ╵&quot;]"><wbr />snumber4<span class="attachedType"></span></a></li>
+    title="snumber4 = [&quot;╷ ╷&quot;, &quot;└─┤&quot;, &quot;  ╵&quot;]">snumber4</a></li>
   <li><a class="reference" href="#snumber5"
-    title="snumber5 = [&quot;┌─╴&quot;, &quot;└─┐&quot;, &quot;╶─┘&quot;]"><wbr />snumber5<span class="attachedType"></span></a></li>
+    title="snumber5 = [&quot;┌─╴&quot;, &quot;└─┐&quot;, &quot;╶─┘&quot;]">snumber5</a></li>
   <li><a class="reference" href="#snumber6"
-    title="snumber6 = [&quot;┌─╴&quot;, &quot;├─┐&quot;, &quot;└─┘&quot;]"><wbr />snumber6<span class="attachedType"></span></a></li>
+    title="snumber6 = [&quot;┌─╴&quot;, &quot;├─┐&quot;, &quot;└─┘&quot;]">snumber6</a></li>
   <li><a class="reference" href="#snumber7"
-    title="snumber7 = [&quot;╶─┐&quot;, &quot;  │&quot;, &quot;  ╵&quot;]"><wbr />snumber7<span class="attachedType"></span></a></li>
+    title="snumber7 = [&quot;╶─┐&quot;, &quot;  │&quot;, &quot;  ╵&quot;]">snumber7</a></li>
   <li><a class="reference" href="#snumber8"
-    title="snumber8 = [&quot;┌─┐&quot;, &quot;├─┤&quot;, &quot;└─┘&quot;]"><wbr />snumber8<span class="attachedType"></span></a></li>
+    title="snumber8 = [&quot;┌─┐&quot;, &quot;├─┤&quot;, &quot;└─┘&quot;]">snumber8</a></li>
   <li><a class="reference" href="#snumber9"
-    title="snumber9 = [&quot;┌─┐&quot;, &quot;└─┤&quot;, &quot;╶─┘&quot;]"><wbr />snumber9<span class="attachedType"></span></a></li>
+    title="snumber9 = [&quot;┌─┐&quot;, &quot;└─┤&quot;, &quot;╶─┘&quot;]">snumber9</a></li>
   <li><a class="reference" href="#scolon"
-    title="scolon = [&quot;╷ &quot;, &quot;╷ &quot;, &quot;  &quot;]"><wbr />scolon<span class="attachedType"></span></a></li>
+    title="scolon = [&quot;╷ &quot;, &quot;╷ &quot;, &quot;  &quot;]">scolon</a></li>
   <li><a class="reference" href="#scomma"
-    title="scomma = [&quot;  &quot;, &quot;  &quot;, &quot;╷ &quot;]"><wbr />scomma<span class="attachedType"></span></a></li>
+    title="scomma = [&quot;  &quot;, &quot;  &quot;, &quot;╷ &quot;]">scomma</a></li>
   <li><a class="reference" href="#sdot"
-    title="sdot = [&quot;  &quot;, &quot;  &quot;, &quot;. &quot;]"><wbr />sdot<span class="attachedType"></span></a></li>
+    title="sdot = [&quot;  &quot;, &quot;  &quot;, &quot;. &quot;]">sdot</a></li>
   <li><a class="reference" href="#sblank"
-    title="sblank = [&quot;  &quot;, &quot;  &quot;, &quot;  &quot;]"><wbr />sblank<span class="attachedType"></span></a></li>
+    title="sblank = [&quot;  &quot;, &quot;  &quot;, &quot;  &quot;]">sblank</a></li>
   <li><a class="reference" href="#dotmatrixraw"
     title="dotmatrixraw = &quot;&quot;&quot;         _  _        @
       _ (_)(_) _     @
@@ -1785,7 +1785,7 @@ function main() {
    (_)               @
                      @
                      @@                     
-&quot;&quot;&quot;"><wbr />dotmatrixraw<span class="attachedType"></span></a></li>
+&quot;&quot;&quot;">dotmatrixraw</a></li>
   <li><a class="reference" href="#sidewaysraw"
     title="sidewaysraw = &quot;&quot;&quot; _  #
 | | #
@@ -2363,63 +2363,63 @@ __  #
 &apos;.______/ #
           #
           ##
-&quot;&quot;&quot;"><wbr />sidewaysraw<span class="attachedType"></span></a></li>
+&quot;&quot;&quot;">sidewaysraw</a></li>
   <li><a class="reference" href="#sla"
-    title="sla = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;]"><wbr />sla<span class="attachedType"></span></a></li>
+    title="sla = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;]">sla</a></li>
   <li><a class="reference" href="#slb"
-    title="slb = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;]"><wbr />slb<span class="attachedType"></span></a></li>
+    title="slb = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;]">slb</a></li>
   <li><a class="reference" href="#slc"
-    title="slc = [&quot;&quot;&quot; ___  &quot;&quot;&quot;, &quot;&quot;&quot;|     &quot;&quot;&quot;, &quot;&quot;&quot;|___  &quot;&quot;&quot;]"><wbr />slc<span class="attachedType"></span></a></li>
+    title="slc = [&quot;&quot;&quot; ___  &quot;&quot;&quot;, &quot;&quot;&quot;|     &quot;&quot;&quot;, &quot;&quot;&quot;|___  &quot;&quot;&quot;]">slc</a></li>
   <li><a class="reference" href="#sld"
-    title="sld = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|  \ &quot;&quot;&quot;, &quot;&quot;&quot;|__/ &quot;&quot;&quot;]"><wbr />sld<span class="attachedType"></span></a></li>
+    title="sld = [&quot;&quot;&quot; __  &quot;&quot;&quot;, &quot;&quot;&quot;|  \ &quot;&quot;&quot;, &quot;&quot;&quot;|__/ &quot;&quot;&quot;]">sld</a></li>
   <li><a class="reference" href="#sle"
-    title="sle = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;|___&quot;&quot;&quot;, &quot;&quot;&quot;|___ &quot;&quot;&quot;]"><wbr />sle<span class="attachedType"></span></a></li>
+    title="sle = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;|___&quot;&quot;&quot;, &quot;&quot;&quot;|___ &quot;&quot;&quot;]">sle</a></li>
   <li><a class="reference" href="#slf"
-    title="slf = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;|___&quot;&quot;&quot;, &quot;&quot;&quot;|&quot;&quot;&quot;]"><wbr />slf<span class="attachedType"></span></a></li>
+    title="slf = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;|___&quot;&quot;&quot;, &quot;&quot;&quot;|&quot;&quot;&quot;]">slf</a></li>
   <li><a class="reference" href="#slg"
-    title="slg = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;| __&quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;]"><wbr />slg<span class="attachedType"></span></a></li>
+    title="slg = [&quot;&quot;&quot; ___&quot;&quot;&quot;, &quot;&quot;&quot;| __&quot;&quot;&quot;, &quot;&quot;&quot;|__] &quot;&quot;&quot;]">slg</a></li>
   <li><a class="reference" href="#slh"
-    title="slh = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;]"><wbr />slh<span class="attachedType"></span></a></li>
+    title="slh = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;]">slh</a></li>
   <li><a class="reference" href="#sli"
-    title="sli = [&quot;&quot;&quot;_&quot;&quot;&quot;, &quot;&quot;&quot;|&quot;&quot;&quot;, &quot;&quot;&quot;| &quot;&quot;&quot;]"><wbr />sli<span class="attachedType"></span></a></li>
+    title="sli = [&quot;&quot;&quot;_&quot;&quot;&quot;, &quot;&quot;&quot;|&quot;&quot;&quot;, &quot;&quot;&quot;| &quot;&quot;&quot;]">sli</a></li>
   <li><a class="reference" href="#slj"
-    title="slj = [&quot;&quot;&quot; _&quot;&quot;&quot;, &quot;&quot;&quot; |&quot;&quot;&quot;, &quot;&quot;&quot;_| &quot;&quot;&quot;]"><wbr />slj<span class="attachedType"></span></a></li>
+    title="slj = [&quot;&quot;&quot; _&quot;&quot;&quot;, &quot;&quot;&quot; |&quot;&quot;&quot;, &quot;&quot;&quot;_| &quot;&quot;&quot;]">slj</a></li>
   <li><a class="reference" href="#slk"
-    title="slk = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|_/ &quot;&quot;&quot;, &quot;&quot;&quot;| \_ &quot;&quot;&quot;]"><wbr />slk<span class="attachedType"></span></a></li>
+    title="slk = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|_/ &quot;&quot;&quot;, &quot;&quot;&quot;| \_ &quot;&quot;&quot;]">slk</a></li>
   <li><a class="reference" href="#sll"
-    title="sll = [&quot;&quot;&quot;_   &quot;&quot;&quot;, &quot;&quot;&quot;|   &quot;&quot;&quot;, &quot;&quot;&quot;|___ &quot;&quot;&quot;]"><wbr />sll<span class="attachedType"></span></a></li>
+    title="sll = [&quot;&quot;&quot;_   &quot;&quot;&quot;, &quot;&quot;&quot;|   &quot;&quot;&quot;, &quot;&quot;&quot;|___ &quot;&quot;&quot;]">sll</a></li>
   <li><a class="reference" href="#slm"
-    title="slm = [&quot;&quot;&quot; _  _&quot;&quot;&quot;, &quot;&quot;&quot; |\/|&quot;&quot;&quot;, &quot;&quot;&quot; |  | &quot;&quot;&quot;]"><wbr />slm<span class="attachedType"></span></a></li>
+    title="slm = [&quot;&quot;&quot; _  _&quot;&quot;&quot;, &quot;&quot;&quot; |\/|&quot;&quot;&quot;, &quot;&quot;&quot; |  | &quot;&quot;&quot;]">slm</a></li>
   <li><a class="reference" href="#sln"
-    title="sln = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot;|\ |&quot;&quot;&quot;, &quot;&quot;&quot;| \| &quot;&quot;&quot;]"><wbr />sln<span class="attachedType"></span></a></li>
+    title="sln = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot;|\ |&quot;&quot;&quot;, &quot;&quot;&quot;| \| &quot;&quot;&quot;]">sln</a></li>
   <li><a class="reference" href="#slo"
-    title="slo = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]"><wbr />slo<span class="attachedType"></span></a></li>
+    title="slo = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]">slo</a></li>
   <li><a class="reference" href="#slp"
-    title="slp = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__]&quot;&quot;&quot;, &quot;&quot;&quot;|   &quot;&quot;&quot;]"><wbr />slp<span class="attachedType"></span></a></li>
+    title="slp = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__]&quot;&quot;&quot;, &quot;&quot;&quot;|   &quot;&quot;&quot;]">slp</a></li>
   <li><a class="reference" href="#slq"
-    title="slq = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot;|_\| &quot;&quot;&quot;]"><wbr />slq<span class="attachedType"></span></a></li>
+    title="slq = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot;|_\| &quot;&quot;&quot;]">slq</a></li>
   <li><a class="reference" href="#slr"
-    title="slr = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__/&quot;&quot;&quot;, &quot;&quot;&quot;|  \ &quot;&quot;&quot;]"><wbr />slr<span class="attachedType"></span></a></li>
+    title="slr = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__/&quot;&quot;&quot;, &quot;&quot;&quot;|  \ &quot;&quot;&quot;]">slr</a></li>
   <li><a class="reference" href="#sls"
-    title="sls = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;[__ &quot;&quot;&quot;, &quot;&quot;&quot;___] &quot;&quot;&quot;]"><wbr />sls<span class="attachedType"></span></a></li>
+    title="sls = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;[__ &quot;&quot;&quot;, &quot;&quot;&quot;___] &quot;&quot;&quot;]">sls</a></li>
   <li><a class="reference" href="#slt"
-    title="slt = [&quot;&quot;&quot;___&quot;&quot;&quot;, &quot;&quot;&quot; | &quot;&quot;&quot;, &quot;&quot;&quot; |  &quot;&quot;&quot;]"><wbr />slt<span class="attachedType"></span></a></li>
+    title="slt = [&quot;&quot;&quot;___&quot;&quot;&quot;, &quot;&quot;&quot; | &quot;&quot;&quot;, &quot;&quot;&quot; |  &quot;&quot;&quot;]">slt</a></li>
   <li><a class="reference" href="#slu"
-    title="slu = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]"><wbr />slu<span class="attachedType"></span></a></li>
+    title="slu = [&quot;&quot;&quot;_  _ &quot;&quot;&quot;, &quot;&quot;&quot;|  | &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]">slu</a></li>
   <li><a class="reference" href="#slv"
-    title="slv = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot; \/  &quot;&quot;&quot;]"><wbr />slv<span class="attachedType"></span></a></li>
+    title="slv = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot;|  |&quot;&quot;&quot;, &quot;&quot;&quot; \/  &quot;&quot;&quot;]">slv</a></li>
   <li><a class="reference" href="#slw"
-    title="slw = [&quot;&quot;&quot;_ _ _&quot;&quot;&quot;, &quot;&quot;&quot;| | |&quot;&quot;&quot;, &quot;&quot;&quot;|_|_| &quot;&quot;&quot;]"><wbr />slw<span class="attachedType"></span></a></li>
+    title="slw = [&quot;&quot;&quot;_ _ _&quot;&quot;&quot;, &quot;&quot;&quot;| | |&quot;&quot;&quot;, &quot;&quot;&quot;|_|_| &quot;&quot;&quot;]">slw</a></li>
   <li><a class="reference" href="#slx"
-    title="slx = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot; \/ &quot;&quot;&quot;, &quot;&quot;&quot;_/\_&quot;&quot;&quot;]"><wbr />slx<span class="attachedType"></span></a></li>
+    title="slx = [&quot;&quot;&quot;_  _&quot;&quot;&quot;, &quot;&quot;&quot; \/ &quot;&quot;&quot;, &quot;&quot;&quot;_/\_&quot;&quot;&quot;]">slx</a></li>
   <li><a class="reference" href="#sly"
-    title="sly = [&quot;&quot;&quot;_   _ &quot;&quot;&quot;, &quot;&quot;&quot; \_/ &quot;&quot;&quot;, &quot;&quot;&quot;  |   &quot;&quot;&quot;]"><wbr />sly<span class="attachedType"></span></a></li>
+    title="sly = [&quot;&quot;&quot;_   _ &quot;&quot;&quot;, &quot;&quot;&quot; \_/ &quot;&quot;&quot;, &quot;&quot;&quot;  |   &quot;&quot;&quot;]">sly</a></li>
   <li><a class="reference" href="#slz"
-    title="slz = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;  /  &quot;&quot;&quot;, &quot;&quot;&quot; /__&quot;&quot;&quot;]"><wbr />slz<span class="attachedType"></span></a></li>
+    title="slz = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;  /  &quot;&quot;&quot;, &quot;&quot;&quot; /__&quot;&quot;&quot;]">slz</a></li>
   <li><a class="reference" href="#sl1"
-    title="sl1 = [&quot;&quot;&quot; _&quot;&quot;&quot;, &quot;&quot;&quot;/|&quot;&quot;&quot;, &quot;&quot;&quot; |&quot;&quot;&quot;]"><wbr />sl1<span class="attachedType"></span></a></li>
+    title="sl1 = [&quot;&quot;&quot; _&quot;&quot;&quot;, &quot;&quot;&quot;/|&quot;&quot;&quot;, &quot;&quot;&quot; |&quot;&quot;&quot;]">sl1</a></li>
   <li><a class="reference" href="#sl6"
-    title="sl6 = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__ &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]"><wbr />sl6<span class="attachedType"></span></a></li>
+    title="sl6 = [&quot;&quot;&quot; __ &quot;&quot;&quot;, &quot;&quot;&quot;|__ &quot;&quot;&quot;, &quot;&quot;&quot;|__| &quot;&quot;&quot;]">sl6</a></li>
 
   </ul>
 </li>
@@ -2427,6 +2427,7 @@ __  #
 </ul>
 
   </div>
+  
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
@@ -5018,7 +5019,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-09-26 17:36:27 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:41 UTC</small>
       </div>
     </div>
   </div>
