--- a/cxhash.html
+++ b/cxhash.html
@@ -94,14 +94,26 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">getGitHash
+      <li><a class="reference" href="#getGitHash"
+    title="getGitHash(): string">getGitHash</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">verifyHash
+      <li><a class="reference" href="#verifyHash%2Cstring%2CT"
+    title="verifyHash[T](kata: string; hsx: T): bool">verifyHash,<wbr>string,<wbr>T</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">createHash
+      <li><a class="reference" href="#createHash%2Cstring"
+    title="createHash(kata: string): auto">createHash,<wbr>string</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">checkHash
       <li><a class="reference" href="#checkHash%2Cstring%2CT"
-    title="checkHash[T](kata: string; hsx: T)"><wbr />check<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#verifyHash%2Cstring%2CT"
-    title="verifyHash[T](kata: string; hsx: T): bool"><wbr />verify<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#createHash%2Cstring"
-    title="createHash(kata: string): auto"><wbr />create<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#getGitHash"
-    title="getGitHash(): string"><wbr />get<wbr />Git<wbr />Hash<span class="attachedType"></span></a></li>
+    title="checkHash[T](kata: string; hsx: T)">checkHash,<wbr>string,<wbr>T</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -109,6 +121,7 @@ function main() {
 </ul>
 
   </div>
+  
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
@@ -184,7 +197,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-09-26 17:36:23 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:37 UTC</small>
       </div>
     </div>
   </div>
