--- a/cxstats.html
+++ b/cxstats.html
@@ -100,19 +100,34 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
+      <ul class="simple nested-toc-section">showStats
       <li><a class="reference" href="#showStats%2CRunningStat%2Cint%2Cint"
-    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)"><wbr />show<wbr />Stats<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"
-    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)"><wbr />show<wbr />Regression<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
-    title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)"><wbr />show<wbr />Regression<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#zscore%2CopenArray%5BSomeNumber%5D"
-    title="zscore(data: openArray[SomeNumber]): seq[float]"><wbr />zscore<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"
+    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)">showStats,<wbr>RunningStat,<wbr>int,<wbr>int</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">rolling_zscore
+      <li><a class="reference" href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"
     title="rolling_zscore(data: openArray[float]; observed_window: openArray[float];
-               decay: float = 0.9): float"><wbr />rolling_<wbr />zscore<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#median%2CopenArray%5Bfloat%5D"
-    title="median(xs: openArray[float]): float"><wbr />median<span class="attachedType"></span></a></li>
+               decay: float = 0.9): float">rolling_zscore,<wbr>openArray[float],<wbr>openArray[float],<wbr>float</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">showRegression
+      <li><a class="reference" href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"
+    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)">showRegression,<wbr>openArray[],<wbr>openArray[],<wbr>int,<wbr>int</a></li>
+  <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
+    title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)">showRegression,<wbr>RunningRegress,<wbr>int,<wbr>int</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">median
+      <li><a class="reference" href="#median%2CopenArray%5Bfloat%5D"
+    title="median(xs: openArray[float]): float">median,<wbr>openArray[float]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">zscore
+      <li><a class="reference" href="#zscore%2CopenArray%5BSomeNumber%5D"
+    title="zscore(data: openArray[SomeNumber]): seq[float]">zscore,<wbr>openArray[SomeNumber]</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -120,6 +135,7 @@ function main() {
 </ul>
 
   </div>
+  
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
@@ -149,8 +165,8 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="showStats,RunningStat,int,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#showStats%2CRunningStat%2Cint%2Cint"><span class="Identifier">showStats</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">RunningStat</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#showStats%2CRunningStat%2Cint%2Cint"><span class="Identifier">showStats</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">RunningStat</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>showStats</p>
@@ -227,7 +243,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 </dd>
 <a id="rolling_zscore,openArray[float],openArray[float],float"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span>
-                   <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+                    <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -250,7 +266,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-09-26 17:36:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:35 UTC</small>
       </div>
     </div>
   </div>
