--- a/cxversion.html
+++ b/cxversion.html
@@ -95,7 +95,7 @@ function main() {
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#CXLIBVERSION"
-    title="CXLIBVERSION = &quot;1.0.8&quot;"><wbr />CXLIBVERSION<span class="attachedType"></span></a></li>
+    title="CXLIBVERSION = &quot;1.0.8&quot;">CXLIBVERSION</a></li>
 
   </ul>
 </li>
@@ -103,6 +103,7 @@ function main() {
 </ul>
 
   </div>
+  
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
@@ -134,7 +135,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-09-26 17:35:30 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:24:15 UTC</small>
       </div>
     </div>
   </div>
