--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -56,10 +56,12 @@ function main() {
     }
   }
 }
+
+window.addEventListener('DOMContentLoaded', main);
 </script>
 
 </head>
-<body onload="main()">
+<body>
 <div class="document" id="documentId">
   <div class="container">
     <h1 class="title">cxnetwork</h1>
@@ -427,7 +429,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:15:46 UTC</small>
       </div>
     </div>
   </div>
