--- a/cxprint.html
+++ b/cxprint.html
@@ -56,10 +56,12 @@ function main() {
     }
   }
 }
+
+window.addEventListener('DOMContentLoaded', main);
 </script>
 
 </head>
-<body onload="main()">
+<body>
 <div class="document" id="documentId">
   <div class="container">
     <h1 class="title">cxprint</h1>
@@ -137,6 +139,14 @@ function main() {
   dotrightcolor*: string
   linetype*: CxLineType
   newline*: string">Cxline</a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#msgLeftWidth"
+    title="msgLeftWidth = 8">msgLeftWidth</a></li>
 
   </ul>
 </li>
@@ -321,8 +331,8 @@ function main() {
   </ul>
   <ul class="simple nested-toc-section">printLnInfoMsg
       <li><a class="reference" href="#printLnInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"
-    title="printLnInfoMsg(info: string; atext: string = &quot;&quot;;
-               colLeft: string = lightslategray; colRight: string = pastelWhite;
+    title="printLnInfoMsg(info: string = &quot;Info    &quot;; atext: string = &quot;&quot;;
+               colLeft: string = lightslategray; colRight: string = rosyBrown;
                xpos: int = 1): string">printLnInfoMsg,<wbr>string,<wbr>string,<wbr>string,<wbr>string,<wbr>int</a></li>
 
   </ul>
@@ -345,8 +355,8 @@ function main() {
   </ul>
   <ul class="simple nested-toc-section">printInfoMsg
       <li><a class="reference" href="#printInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"
-    title="printInfoMsg(info: string = &quot;&quot;; atext: string = &quot;&quot;;
-             colLeft: string = lightslategray; colRight: string = pastelWhite;
+    title="printInfoMsg(info: string = &quot;Info    &quot;; atext: string = &quot;&quot;;
+             colLeft: string = lightslategray; colRight: string = rosyBrown;
              xpos: int = 1): string">printInfoMsg,<wbr>string,<wbr>string,<wbr>string,<wbr>string,<wbr>int</a></li>
 
   </ul>
@@ -428,7 +438,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2020-10-19
+Latest      : 2020-12-04
 
 Compiler    : latest stable or devel branch
 
@@ -493,6 +503,18 @@ Description : provides most printing functions for the library</pre>
   <span class="Identifier">linetype</span><span class="Operator">*</span><span class="Other">:</span> <a href="cxprint.html#CxLineType"><span class="Identifier">CxLineType</span></a>
   <span class="Identifier">newline</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
 </pre></dt>
+<dd>
+
+
+
+</dd>
+
+</dl></div>
+<div class="section" id="8">
+<h1><a class="toc-backref" href="#8">Vars</a></h1>
+<dl class="item">
+<a id="msgLeftWidth"></a>
+<dt><pre><a href="cxprint.html#msgLeftWidth"><span class="Identifier">msgLeftWidth</span></a> <span class="Other">=</span> <span class="DecNumber">8</span></pre></dt>
 <dd>
 
 
@@ -1030,9 +1052,9 @@ forward declaration<p>printRainbow</p>
 
 </dd>
 <a id="printInfoMsg,string,string,string,string,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#printInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"><span class="Identifier">printInfoMsg</span></a><span class="Other">(</span><span class="Identifier">info</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">;</span> <span class="Identifier">atext</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">;</span>
+<dt><pre><span class="Keyword">proc</span> <a href="#printInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"><span class="Identifier">printInfoMsg</span></a><span class="Other">(</span><span class="Identifier">info</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Info    &quot;</span><span class="Other">;</span> <span class="Identifier">atext</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">;</span>
                   <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">lightslategray</span><span class="Other">;</span>
-                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">pastelWhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">rosyBrown</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -1041,9 +1063,9 @@ forward declaration<p>printRainbow</p>
 
 </dd>
 <a id="printLnInfoMsg,string,string,string,string,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#printLnInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"><span class="Identifier">printLnInfoMsg</span></a><span class="Other">(</span><span class="Identifier">info</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">atext</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">;</span>
+<dt><pre><span class="Keyword">proc</span> <a href="#printLnInfoMsg%2Cstring%2Cstring%2Cstring%2Cstring%2Cint"><span class="Identifier">printLnInfoMsg</span></a><span class="Other">(</span><span class="Identifier">info</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Info    &quot;</span><span class="Other">;</span> <span class="Identifier">atext</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">;</span>
                     <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">lightslategray</span><span class="Other">;</span>
-                    <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">pastelWhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+                    <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">rosyBrown</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -1150,7 +1172,7 @@ forward declaration<p>printRainbow</p>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:37 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:16:15 UTC</small>
       </div>
     </div>
   </div>
