--- a/cxstats.html
+++ b/cxstats.html
@@ -56,10 +56,12 @@ function main() {
     }
   }
 }
+
+window.addEventListener('DOMContentLoaded', main);
 </script>
 
 </head>
-<body onload="main()">
+<body>
 <div class="document" id="documentId">
   <div class="container">
     <h1 class="title">cxstats</h1>
@@ -266,7 +268,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:25:35 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:16:13 UTC</small>
       </div>
     </div>
   </div>
