--- a/cxversion.html
+++ b/cxversion.html
@@ -56,10 +56,12 @@ function main() {
     }
   }
 }
+
+window.addEventListener('DOMContentLoaded', main);
 </script>
 
 </head>
-<body onload="main()">
+<body>
 <div class="document" id="documentId">
   <div class="container">
     <h1 class="title">cxversion</h1>
@@ -107,13 +109,12 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"><blockquote><p><p>Library     : nimcx.nim</p>
+  <p class="module-desc"><p>Library     : nimcx.nim</p>
 <p>Module      : cxversion.nim</p>
 <p>Status      : stable</p>
 <p>License     : MIT opensource</p>
 <p>Latest      : 2020-09-26</p>
-<p>Note        : holds the current version of this library</p>
-</p></blockquote>
+<p>Note        : holds the current version of this library </p>
 </p>
   <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
@@ -135,7 +136,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-11-19 15:24:15 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:15:20 UTC</small>
       </div>
     </div>
   </div>
